<resources>
    <string name="app_name" translatable="false">LSPM</string>

    <!-- region List Fragment -->
    <!-- Dialogs -->
    <string name="add_title">Создать элемент</string>
    <string name="add_item_name">Название</string>
    <string name="done_add_item">Ок</string>
    <string name="revert_add_item">Отмена</string>

    <string name="delete_title">Удалить элемент</string>
    <string name="done_delete_item">Ок</string>
    <string name="revert_delete_item">Отмена</string>

    <string name="edit_title">Изменить элемент</string>
    <string name="edit_item_name">Новое название</string>
    <string name="done_edit_item">Ок</string>
    <string name="revert_edit_item">Отмена</string>

    <!-- Bottom Navigation -->
    <string name="bottom_navigation_list" translatable="false">List</string>
    <string name="bottom_navigation_scaling" translatable="false">Scaling</string>
    <string name="bottom_navigation_parsing" translatable="false">Parsing</string>
    <string name="bottom_navigation_map" translatable="false">Map</string>

    <!-- Context Menu Long Click Items -->
    <string name="long_menu_edit">Изменить</string>
    <string name="long_menu_delete">Удалить</string>

    <!-- Toast Messages -->
    <string name="empty_field">Поля не должны быть пустыми!</string>
    <!-- endregion -->

    <!-- region Parsing -->
    <string name="choose_image_button_text">Выбрать изображение</string>
    <string name="take_a_photo_button_text">Сделать фото</string>

    <string name="error_load_quotes_message">Ошибка соединения</string>
    <string name="request_to_repeat">Повторить</string>
    <!-- endregion -->

    <!-- region Map -->
    <string name="map_token" translatable="false">pk.eyJ1IjoiY2VzcGF1bCIsImEiOiJja2ZtYWY4eDUxMHZwMnJuenF3eDB4NDVyIn0.4e5QVO7v7Gz0I2TO0w1sqg</string>

    <string name="user_location_permission_not_granted">Отсутствуют разрешения на геолокацию</string>
    <string name="user_location_permission_request">Запросить</string>
    <string name="user_location_do_not_locate">Геопозиция не определена</string>
    <!-- endregion -->
</resources>